@@ -1014,6 +1014,20 @@ class PokerRendererTests(unittest.TestCase):
         self.renderer.maybeStartLookCards()
         self.assertEquals(get_messages(), ["ignoring look card the game is not running"])
         self.assertEquals(proto.packetList, [])
+    # -----------------------------------------------------------------------------------------------------
+    def test18_scheduleLookCardsNoGameRunning(self):
+        """This test is very similar to the previous one.  There should be
+        output about game not running, and no packets scheduled by
+        maybeStartLookCards when the game is not running (by default, game
+        is not running in our Mock Up"""
+        clear_all_messages()
+        proto = PokerRendererTests.MockPokerProtocol()
+        self.renderer.setProtocol(proto)
+        self.assertEquals(get_messages(), [])
+
+        self.renderer.scheduleLookCardsAfterInteractionAnimation()
+        self.assertEquals(get_messages(), ["ignoring look card the game is not running"])
+        self.assertEquals(proto.packetList, [])
 # -----------------------------------------------------------------------------------------------------
 def GetTestSuite():
     suite = unittest.TestSuite()
